[package]
name = "lynx_hr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.4"
rand = "0.8.5"
tokio = { version = "1.23.0", features = ["full"] }
uuid = "1.2.2"
futures = "0.3.25"
aes = "0.8.2"
lazy_static = "1.4.0"
chrono = "0.4.23"
async-osc = "0.2.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
anyhow = "1.0.66"